--- a/TestApp/test-output/index.html
+++ b/TestApp/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.scenarios.Demo" hash-for-method="amazonTest">amazonTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.test.scenarios.Demo" hash-for-method="dispay">dispay</a> <!-- method navigator-link -->
@@ -130,6 +135,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="amazonTest">
+                  </a> <!-- amazonTest -->
+                  <span class="method-name">amazonTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="dispay">
                   </a> <!-- dispay -->
                   <span class="method-name">dispay</span>
@@ -149,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/k9/tv_0p8fx7dg_r17cyjp1rw640000gn/T/testng-eclipse--1041339403/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/k9/tv_0p8fx7dg_r17cyjp1rw640000gn/T/testng-eclipse-529824292/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,20 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'googleSearch')
+data.setCell(0, 1, 'amazonTest')
 data.setCell(0, 2, 'com.test.scenarios.Demo')
-data.setCell(0, 3, 6996);
+data.setCell(0, 3, 10669);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'dispay')
+data.setCell(1, 1, 'googleSearch')
 data.setCell(1, 2, 'com.test.scenarios.Demo')
-data.setCell(1, 3, 9);
+data.setCell(1, 3, 1509);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'dispay')
+data.setCell(2, 2, 'com.test.scenarios.Demo')
+data.setCell(2, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -239,16 +255,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.test.scenarios.Demo</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">dispay</span>
+                <span class="method-name">amazonTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <span class="method-name">dispay</span>
+                <span class="method-start">10671 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">googleSearch</span>
-                <span class="method-start">11 ms</span>
+                <span class="method-start">10673 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">7009 ms</span>
+                <span class="method-start">12183 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
