--- a/TestApp/test-output/old/Default suite/classes.html
+++ b/TestApp/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>amazonTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>dispay</td>
 <td>&nbsp;</td></tr>
 <tr>
