--- a/TestApp/test-output/old/Default suite/methods.html
+++ b/TestApp/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a48d">  <td>20/06/21 22:12:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.dispay()[pri:0, instance:com.test.scenarios.Demo@4c70fda8]">dispay</td> 
-  <td>main@1845904670</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>20/06/21 22:12:35</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.googleSearch()[pri:0, instance:com.test.scenarios.Demo@4c70fda8]">googleSearch</td> 
-  <td>main@1845904670</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>20/06/21 22:12:42</td>   <td>7009</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.tearDown()[pri:0, instance:com.test.scenarios.Demo@4c70fda8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1845904670</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>20/07/30 18:59:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.amazonTest()[pri:0, instance:com.test.scenarios.Demo@224edc67]">amazonTest</td> 
+  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>20/07/30 18:59:10</td>   <td>10671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.dispay()[pri:0, instance:com.test.scenarios.Demo@224edc67]">dispay</td> 
+  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>20/07/30 18:59:10</td>   <td>10673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.googleSearch()[pri:0, instance:com.test.scenarios.Demo@224edc67]">googleSearch</td> 
+  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>20/07/30 18:59:12</td>   <td>12183</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.tearDown()[pri:0, instance:com.test.scenarios.Demo@224edc67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
 </table>
